# oak

./: .env.example  .gitignore  CLAUDE.md  DEMO_PROOF.md  DEMO_PROOF_2.md  DEMO_PROOF_3.md  DEMO_PROOF_REACT.md  PROGRESS.md  QUICKSTART.md  README.md  USER_MANUAL.md  app.py  install.sh  pyproject.toml  requirements-ui.txt
.claude/agents/: ai-engineer.md  data-engineer.md  devops.md  frontend.md  security-expert.md
.claude/commands/: oak-audit.md  oak-benchmark.md  oak-improve.md  oak-research.md
.claude/hooks/: post-tool-use.sh
.github/workflows/: ci.yml  publish.yml
api/: config.py  dependencies.py  main.py
api/db/: schema.sql
api/events/: bus.py
api/factories/: agent_factory.py
api/lifecycle/: __init__.py  agent_lifecycle.py
api/models/: __init__.py
api/routers/: agents.py  builder.py  judge.py  meta.py  problems.py  skills.py  tasks.py  telemetry.py
api/services/: agent_registry.py  mailbox_service.py
api/ws/: stream.py
docker/: Dockerfile.aio  aio-entrypoint.sh  docker-compose.base.yml  docker-compose.dgx.yml  docker-compose.mini.yml  docker-compose.prebuilt.yml  docker-compose.yml  init-db.sh  supervisord.conf
docker/api/: Dockerfile
docker/builder/: Dockerfile  requirements.txt
docker/claude-harness/: Dockerfile
docker/claude-harness/scripts/: entrypoint.sh  tool-proxy.sh
docker/daemon/: Dockerfile
docker/watchdog/: Dockerfile  watchdog.sh
memory/: cached_skills.py  context_manager.py  episodic.py  episodic_repository.py  interfaces.py  redis_client.py  skill_repository.py  validation_chain.py
oak_builder/: cortex.py  gap_analyzer.py  main.py  problem_generator.py
oak_builder/actions/: __init__.py  code_changes.py  domain_problems.py  git_ops.py  infra.py  introspection.py  learning.py  manifest.py  models.py  rag.py  self_modify.py
oak_mcp/oak-api-proxy/: main.py  strategies.py
oak_mcp/oak-memory-mcp/: server.py
oak_mcp/oak-skills-mcp/: server.py
scripts/: bootstrap.sh  demo_e2e.py  demo_final.py  demo_react_ui.py  demo_video.py  deny-patterns.txt  e2e_ui_test.py  ingest_csv.py  new-problem.sh  oak-daemon.sh  seed_skills.sql  verify_completed_problem.py
tests/contract/: test_session_state.py  test_tool_proxy.py
tests/integration/: test_phase0_pipeline.py  test_skill_extraction_loop.py
tests/unit/: test_agent_factory.py  test_agent_lifecycle.py  test_agent_registry.py  test_cached_skills.py  test_judge.py  test_models.py  test_proxy_escalation.py  test_proxy_strategies.py  test_skill_repository.py  test_skills_router.py  test_telemetry.py  test_validation_chain.py  test_ws_stream.py
ui/: Dockerfile  app.py
ui-next/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
ui-next/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui-next/src/app/builder/: page.tsx
ui-next/src/app/gallery/: page.tsx
ui-next/src/app/problems/[id]/: page.tsx
ui-next/src/app/settings/: page.tsx
ui-next/src/app/skills/: page.tsx
ui-next/src/app/submit/: page.tsx
ui-next/src/app/telemetry/: page.tsx
ui-next/src/components/: file-viewer.tsx  nav.tsx
ui-next/src/components/ui/: badge.tsx  button.tsx  card.tsx  tabs.tsx
ui-next/src/hooks/: use-websocket.ts
ui-next/src/lib/: api.ts  utils.ts
ui/pages/: 02_status.py  03_gallery.py  04_skills.py  05_telemetry.py
