[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oak"
version = "0.1.0"
description = "OAK — Orchestrated Agent Kernel"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "redis>=5.0",
    "httpx>=0.27",
    "websockets>=12",
    "python-multipart>=0.0.9",
    "pandas>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "testcontainers[postgres,redis]>=4",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "pydocstyle>=6",
    "vulture>=2.11",
    "mutmut>=3",
]

[tool.setuptools.packages.find]
include = ["api*", "memory*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "C901", "N", "UP", "B", "ANN"]
ignore = ["ANN401", "B008"]

[tool.ruff.lint.mccabe]
max-complexity = 10  # PRD §6.3: no function exceeds complexity 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D"]
"oak_mcp/oak-api-proxy/*" = ["N999", "C901", "E501", "E402", "ANN"]

# AP-3: flag direct os.environ access outside api/config.py
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = []

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--tb=short -q"
markers = [
    "integration: marks tests as integration tests (require real DB)",
    "contract: marks tests as contract tests (require real services)",
    "smoke: marks tests as smoke tests",
]

[tool.coverage.run]
source = ["api", "memory", "oak_mcp"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 60  # Integration + router code is DB-bound; unit tests cover logic
